<resources>
    <string name="app_name">WeatherHack</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_maps">Map</string>
    <string name="txt_no_bookmarks">"No Bookmark Added "</string>
    <string name="api_key">"fae7190d7e6433ec3a45285ffcf55c86"</string>
    <string name="weatherapi">"30332c56d6de2b50a22185d5b0639807"</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="collapsing_toolbar">Weather Details</string>
    <string name="txt_humidity">Humidity</string>
    <string name="txt_temp">Temperature</string>
    <string name="txt_wind">Wind Speed</string>
    <string name="txt_clouds">Clouds</string>
    <string name="txt_searchcity">Search By City</string>
    <string name="percent_sign">&#x0025;</string>
    <string name="action_help">Help</string>
    <string name="large_txt">This App allows users to boomark a city by clicking on + icon.\n Initially user location will be shown in map in which user may add as bookmark oe else can choose a  different location by moving the map and add it as favourite by clicking on bookmark icon . Once it is done it is shown in main screen where user can view/delete/search the bookmarked cities</string>

</resources>